--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,7 @@ android {
         ignoreFailures = false
         effort = "max"
         reportLevel = "medium"
-        classes = fileTree("$project.buildDir/intermediates/classes/gplay/debug/com/nextcloud")
+        classes = fileTree("${project.rootDir}/app/build/intermediates/javac/gplayDebug/classes/com/nextcloud/")
         excludeFilter = file("${project.rootDir}/findbugs-filter.xml")
         source = fileTree('src/main/java')
         pluginClasspath = project.configurations.findbugsPlugins
