--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
 
 trigger:
   branch:
-    - master
+    - master-broken
   event:
    - push
    - pull_request
@@ -75,11 +75,11 @@ steps:
     status:
       - failure
     branch:
-      - master
+      - master-broken
 
 trigger:
   branch:
-    - master
+    - master-broken
   event:
     - push
     - pull_request
