--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,10 @@ android {
         targetSdkVersion 29
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 110000006 // 0-50=Alpha / 51-98=RC / 90-99=stable
-        versionName "11.0.0 Alpha 06"
+        // mayor.minor.hotfix.increment (for increment: 1-50=Alpha / 51-89=RC / 90-99=stable)
+        // xx   .xxx  .xx    .xx
+        versionCode 120000001
+        versionName "12.0.0 Alpha 1"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
