--- a/app/build.gradle
+++ b/app/build.gradle
@@ -246,15 +246,15 @@ dependencies {
   implementation "androidx.work:work-rxjava2:$work_version"
   androidTestImplementation "androidx.work:work-testing:$work_version"
 
-  implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
+  implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.core:core-ktx:1.3.0-rc01'
   implementation 'androidx.sharetarget:sharetarget:1.0.0-rc01'
-  implementation 'com.google.android.material:material:1.2.0-alpha06'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+  implementation 'com.google.android.material:material:1.3.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'com.github.vanniktech:Emoji:0.6.0'
   implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
   implementation 'org.michaelevans.colorart:library:0.0.3'
-  implementation 'com.google.android:flexbox:2.0.0'
+  implementation 'com.google.android:flexbox:2.0.1'
   implementation 'com.gitlab.bitfireAT:dav4jvm:2.1.2'
   implementation 'org.conscrypt:conscrypt-android:2.4.0'
 
