--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,8 @@ android {
 ext {
     daggerVersion = "2.34.1"
     powermockVersion = "2.0.9"
-    workVersion = "1.0.1"
+    workVersion = "2.3.0"
+    markwonVersion =  "4.6.2"
 }
 
 
@@ -147,10 +148,10 @@ dependencies {
     implementation 'com.github.vanniktech:Emoji:0.6.0'
     implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.1.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
-    implementation "android.arch.work:work-runtime:${workVersion}"
-    implementation "android.arch.work:work-rxjava2:${workVersion}"
+    implementation "androidx.work:work-runtime:${workVersion}"
+    implementation "androidx.work:work-rxjava2:${workVersion}"
+    androidTestImplementation "androidx.work:work-testing:${workVersion}"
     implementation 'com.google.android:flexbox:1.1.1'
-    androidTestImplementation "android.arch.work:work-testing:${workVersion}"
     implementation ('com.gitlab.bitfireAT:dav4jvm:f2078bc846', {
         exclude group: 'org.ogce', module: 'xpp3'	// Android comes with its own XmlPullParser
     })
@@ -242,6 +243,12 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:lifecycle:3.1.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
+
+    implementation "io.noties.markwon:core:$markwonVersion"
 
     //implementation 'com.github.dhaval2404:imagepicker:1.8'
     implementation 'com.github.tobiaskaminsky:ImagePicker:extraFile-SNAPSHOT'
