--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
-    
+
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -107,6 +107,24 @@
             android:name=".activities.MagicCallActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask" />
+
+        <activity
+            android:name=".activities.FullScreenImageActivity"
+            android:theme="@style/FullScreenImageTheme"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
+
+        <activity
+            android:name=".activities.FullScreenMediaActivity"
+            android:theme="@style/FullScreenMediaTheme"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
+
+        <activity
+            android:name=".activities.FullScreenTextViewerActivity"
+            android:theme="@style/FullScreenTextTheme"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
 
         <receiver android:name=".receivers.PackageReplacedReceiver">
             <intent-filter>
