--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,7 @@ android {
 ext {
     coilKtVersion = "1.2.0"
     daggerVersion = "2.34.1"
+    parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
     workVersion = "2.3.0"
     markwonVersion =  "4.6.2"
@@ -195,8 +196,8 @@ dependencies {
     implementation 'io.requery:requery-android:1.6.1'
     implementation 'net.zetetic:android-database-sqlcipher:3.5.9'
     kapt 'io.requery:requery-processor:1.6.1'
-    implementation 'org.parceler:parceler-api:1.1.12'
-    kapt 'org.parceler:parceler:1.1.12'
+    implementation "org.parceler:parceler-api:$parcelerVersion"
+    kapt "org.parceler:parceler:$parcelerVersion"
     implementation 'net.orange-box.storebox:storebox-lib:1.4.0'
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor "org.projectlombok:lombok:1.18.10"
