--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,7 @@ ext {
     daggerVersion = "2.34.1"
     okhttpVersion = "3.14.2"
     lombokVersion = "1.18.10"
+    materialDialogsVersion = "3.3.0"
     parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
     retrofit2Version = "2.7.1"
@@ -259,10 +260,10 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'eu.medsea.mimeutil:mime-util:2.1.3'
 
-    implementation 'com.afollestad.material-dialogs:core:3.1.0'
-    implementation 'com.afollestad.material-dialogs:datetime:3.3.0'
-    implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.0'
-    implementation 'com.afollestad.material-dialogs:lifecycle:3.1.0'
+    implementation "com.afollestad.material-dialogs:core:${materialDialogsVersion}"
+    implementation "com.afollestad.material-dialogs:datetime:${materialDialogsVersion}"
+    implementation "com.afollestad.material-dialogs:bottomsheets:${materialDialogsVersion}"
+    implementation "com.afollestad.material-dialogs:lifecycle:${materialDialogsVersion}"
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
