align dependabot config with files app
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,16 @@
 version: 2
 updates:
-- package-ecosystem: gradle
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "03:00"
-    timezone: Europe/Paris
-  open-pull-requests-limit: 10
-  labels:
-  - 3. to review
+    -   package-ecosystem: "github-actions"
+            directory: "/" # Location of package manifests
+            schedule:
+                interval: "weekly"
+    -   package-ecosystem: gradle
+            directory: "/"
+            schedule:
+                interval: daily
+                time: "03:00"
+                timezone: Europe/Paris
+            open-pull-requests-limit: 10
+            labels:
+                - 3. to review
+                - dependencies
