--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ android {
     compileSdkVersion 29
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.nextcloud.talk2"
         minSdkVersion 21
         targetSdkVersion 29
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -49,9 +48,20 @@ android {
 
         productFlavors {
             // used for f-droid
-            generic
-            gplay
-
+            generic {
+                applicationId 'com.nextcloud.talk2'
+                dimension "default"
+            }
+            gplay {
+                applicationId 'com.nextcloud.talk2'
+                dimension "default"
+            }
+            qa {
+                applicationId "com.nextcloud.talk2.qa"
+                dimension "default"
+                versionCode 1
+                versionName "1"
+            }
         }
 
         // Enabling multidex support.
@@ -86,6 +96,7 @@ android {
     }
 
     packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/rxjava.properties'
