--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.13.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
