proper output path set
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -32,5 +32,5 @@ jobs:
                 if: ${{ always() }}
                 with:
                     name: Nextcloud-APK
-                    path: build/outputs/apk/**/**/qa*.apk
+                    path: app/build/outputs/apk/**/**/qa*.apk
                     retention-days: 5
