--- a/.github/workflows/assembleFlavors.yml
+++ b/.github/workflows/assembleFlavors.yml
@@ -21,3 +21,10 @@ jobs:
           run: |
             echo "org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError" >> gradle.properties
             ./gradlew assemble${{ matrix.flavor }}
+      -   name: Archive apk
+          uses: actions/upload-artifact@v2
+          if: ${{ always() }}
+          with:
+              name: Nextcloud-APK
+              path: app/build/outputs/apk/**/**/*.apk
+              retention-days: 5
