jsr250 lib has moved from annotation to annotation-api
bump to 1.3.2

Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,8 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://jitpack.io'
-        }
+        maven { url 'https://jitpack.io' }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
@@ -50,13 +49,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots'
-        }
-        maven {
-            url 'https://jitpack.io'
-        }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
+        mavenCentral()
     }
 }
 
