--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,7 +188,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
     kapt 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'
-    compileOnly 'javax.annotation:jsr250-api:1.0'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     // Android only
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'io.requery:requery:1.5.1'
