--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,10 +126,14 @@ android {
 }
 
 ext {
+    butterknifeVersion = "10.2.3"
     coilKtVersion = "1.2.0"
     daggerVersion = "2.34.1"
+    okhttpVersion = "3.14.2"
+    lombokVersion = "1.18.10"
     parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
+    retrofit2Version = "2.7.1"
     workVersion = "2.3.0"
     markwonVersion =  "4.6.2"
 }
@@ -173,16 +177,16 @@ dependencies {
     implementation 'com.bluelinelabs:conductor:2.1.5'
     implementation 'com.bluelinelabs:conductor-support:2.1.5'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.14.2'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:${okhttpVersion}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${okhttpVersion}"
 
     implementation 'com.bluelinelabs:logansquare:1.3.7'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.3'
     kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
+    implementation "com.squareup.retrofit2:retrofit:${retrofit2Version}"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
     implementation "com.google.dagger:dagger:$daggerVersion"
@@ -199,10 +203,10 @@ dependencies {
     implementation "org.parceler:parceler-api:$parcelerVersion"
     kapt "org.parceler:parceler:$parcelerVersion"
     implementation 'net.orange-box.storebox:storebox-lib:1.4.0'
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor "org.projectlombok:lombok:1.18.10"
-    implementation 'com.jakewharton:butterknife:10.2.3'
-    kapt 'com.jakewharton:butterknife-compiler:10.2.1'
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    implementation "com.jakewharton:butterknife:${butterknifeVersion}"
+    kapt "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
     implementation 'eu.davidea:flexible-adapter:5.1.0'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
@@ -256,7 +260,7 @@ dependencies {
     implementation 'com.elyeproj.libraries:loaderviewlibrary:2.0.0'
 
     testImplementation 'junit:junit:4.13'
-    testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
     testImplementation "org.powermock:powermock-core:${powermockVersion}"
     testImplementation "org.powermock:powermock-module-junit4:${powermockVersion}"
     testImplementation "org.powermock:powermock-api-mockito2:${powermockVersion}"
