--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,7 @@ ext {
     parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
     retrofit2Version = "2.9.0"
+    rxjava3Version = "3.0.0"
     workVersion = "2.5.0"
     markwonVersion =  "4.6.2"
 }
@@ -186,7 +187,7 @@ dependencies {
     implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.1.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
     implementation "androidx.work:work-runtime:${workVersion}"
-    implementation "androidx.work:work-rxjava2:${workVersion}"
+    implementation "androidx.work:work-rxjava3:${workVersion}"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     androidTestImplementation "androidx.work:work-testing:${workVersion}"
@@ -204,8 +205,8 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
+    implementation "io.reactivex.rxjava3:rxandroid:${rxjava3Version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rxjava3Version}"
 
     implementation 'com.bluelinelabs:conductor:3.1.1'
 
@@ -218,7 +219,7 @@ dependencies {
     kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
     implementation "com.squareup.retrofit2:retrofit:${retrofit2Version}"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:${retrofit2Version}"
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
     implementation "com.google.dagger:dagger:${daggerVersion}"
