migrate further annotations and update additional dependencies
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,7 +167,6 @@ ext {
     parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
     retrofit2Version = "2.9.0"
-    rxjava3Version = "3.0.0"
     workVersion = "2.5.0"
     markwonVersion =  "4.6.2"
 }
@@ -205,8 +204,8 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "io.reactivex.rxjava3:rxandroid:${rxjava3Version}"
-    implementation "io.reactivex.rxjava3:rxjava:${rxjava3Version}"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+    implementation "io.reactivex.rxjava3:rxjava:3.0.12"
 
     implementation 'com.bluelinelabs:conductor:3.1.1'
 
