--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,7 +158,7 @@ ext {
     materialDialogsVersion = "3.3.0"
     parcelerVersion = "1.1.13"
     powermockVersion = "2.0.9"
-    retrofit2Version = "2.7.1"
+    retrofit2Version = "2.9.0"
     workVersion = "2.5.0"
     markwonVersion =  "4.6.2"
 }
@@ -174,7 +174,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.github.vanniktech:Emoji:0.6.0'
+    implementation 'com.github.vanniktech:Emoji:0.6.0'  // 0.7.0 has display issue - don't update to 0.7.0
     implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.1.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
     implementation "androidx.work:work-runtime:${workVersion}"
@@ -212,8 +212,8 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofit2Version}"
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
-    implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger:${daggerVersion}"
+    kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
     implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
     kapt 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
