--- a/app/build.gradle
+++ b/app/build.gradle
@@ -240,15 +240,15 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.github.wooplr:Spotlight:1.3'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation('com.github.mahibi:ChatKit:master-SNAPSHOT', {
+    implementation('com.github.nextcloud:ChatKit:c6a6176729', {
         exclude group: 'com.facebook.fresco'
     })
 
-    implementation 'com.github.mahibi.fresco:fresco:111'
-    implementation 'com.github.mahibi.fresco:animated-webp:111'
-    implementation 'com.github.mahibi.fresco:webpsupport:111'
-    implementation 'com.github.mahibi.fresco:animated-gif:111'
-    implementation 'com.github.mahibi.fresco:imagepipeline-okhttp3:111'
+    implementation 'com.github.nextcloud.fresco:fresco:v111'
+    implementation 'com.github.nextcloud.fresco:animated-webp:v111'
+    implementation 'com.github.nextcloud.fresco:webpsupport:v111'
+    implementation 'com.github.nextcloud.fresco:animated-gif:v111'
+    implementation 'com.github.nextcloud.fresco:imagepipeline-okhttp3:v111'
     implementation 'joda-time:joda-time:2.10.10'
     implementation "io.coil-kt:coil:${coilKtVersion}"
     implementation "io.coil-kt:coil-gif:${coilKtVersion}"
@@ -260,7 +260,7 @@ dependencies {
     implementation 'com.novoda:merlin:1.2.1'
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.1'
-    implementation 'com.github.mahibi:PopupBubble:master-SNAPSHOT'
+    implementation 'com.github.nextcloud:PopupBubble:master-SNAPSHOT'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'eu.medsea.mimeutil:mime-util:2.1.3'
 
