run actions v* branches too
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/.github/workflows/assembleFlavors.yml
+++ b/.github/workflows/assembleFlavors.yml
@@ -2,7 +2,7 @@ name: "Assemble"
 
 on:
   pull_request:
-    branches: [ master, stable-* ]
+    branches: [ master, stable-*, v* ]
 
 jobs:
   flavor:
