--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Check
 
 on:
     pull_request:
-        branches: [ master, stable-* ]
+        branches: [ master, stable-*, v* ]
 
 jobs:
     check:
