--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -2,7 +2,7 @@ name: "Validate Gradle Wrapper"
 
 on:
     pull_request:
-        branches: [ master, stable-* ]
+        branches: [ master, stable-*, v* ]
 
 jobs:
     validation:
