--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,6 +150,10 @@ android {
         htmlOutput file("$project.buildDir/reports/lint/lint.html")
         disable 'MissingTranslation'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 ext {
