--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/rxjava.properties'
     }
 
@@ -267,7 +268,10 @@ dependencies {
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.1'
     implementation 'com.github.nextcloud:PopupBubble:master-SNAPSHOT'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    implementation 'eu.medsea.mimeutil:mime-util:2.1.3'
+
+    implementation('eu.medsea.mimeutil:mime-util:2.1.3', {
+        exclude group: 'org.slf4j'
+    })
 
     implementation "com.afollestad.material-dialogs:core:${materialDialogsVersion}"
     implementation "com.afollestad.material-dialogs:datetime:${materialDialogsVersion}"
@@ -287,6 +291,7 @@ dependencies {
     implementation 'com.elyeproj.libraries:loaderviewlibrary:2.0.0'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
+    implementation 'fr.dudie:nominatim-api:3.4'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.0'
