decrease lint warnings
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ buildscript {
 configurations.all {
     // check for updates every build
     resolutionStrategy.cacheChangingModulesFor 3600, 'seconds'
+    exclude module: 'httpclient'
+    exclude module: 'commons-logging'
 }
 
 allprojects {
