--- a/app/build.gradle
+++ b/app/build.gradle
@@ -296,9 +296,10 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
     implementation 'fr.dudie:nominatim-api:3.4'
 
-    //noinspection DuplicatePlatformClasses
-    api 'org.apache.httpcomponents:httpclient:4.5.9' // Android comes with its own httpclient
+    // noinspection DuplicatePlatformClasses
+    api 'org.apache.httpcomponents:httpclient:4.5.9'
     // nominatim-api uses httpclient
+    // Android comes with its own httpclient
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.0'
