--- a/app/build.gradle
+++ b/app/build.gradle
@@ -297,7 +297,7 @@ dependencies {
     implementation 'fr.dudie:nominatim-api:3.4'
 
     // noinspection DuplicatePlatformClasses
-    api 'org.apache.httpcomponents:httpclient:4.5.9'
+    api group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
     // nominatim-api uses httpclient
     // Android comes with its own httpclient
 
