--- a/app/build.gradle
+++ b/app/build.gradle
@@ -294,8 +294,10 @@ dependencies {
     implementation 'com.elyeproj.libraries:loaderviewlibrary:2.0.0'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
-    //noinspection DuplicatePlatformClasses
-    implementation 'fr.dudie:nominatim-api:3.4'
+    implementation ('fr.dudie:nominatim-api:3.4', {
+        //noinspection DuplicatePlatformClasses
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    })
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.0'
