--- a/app/build.gradle
+++ b/app/build.gradle
@@ -297,6 +297,8 @@ dependencies {
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     })
 
+    implementation 'androidx.core:core-ktx:1.5.0'
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.11.1'
     testImplementation "org.powermock:powermock-core:${powermockVersion}"
