--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,6 +159,7 @@ ext {
     retrofit2Version = "2.9.0"
     workVersion = "2.6.0"
     markwonVersion =  "4.6.2"
+    espressoVersion = "3.4.0"
 }
 
 configurations.all {
@@ -295,6 +296,13 @@ dependencies {
     testImplementation "org.powermock:powermock-core:${powermockVersion}"
     testImplementation "org.powermock:powermock-module-junit4:${powermockVersion}"
     testImplementation "org.powermock:powermock-api-mockito2:${powermockVersion}"
+
+    // Espresso core
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-web:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-accessibility:$espressoVersion"
+    androidTestImplementation('com.android.support.test.espresso:espresso-intents:3.0.2')
 
     androidTestImplementation ('androidx.test.espresso:espresso-core:3.4.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
