prepare stable branch for 12.2
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
 
 trigger:
   branch:
-    - master
+    - stable-12.2
   event:
     - pull_request
     - push
@@ -26,7 +26,7 @@ steps:
 
 trigger:
   branch:
-    - master
+    - stable-12.2
   event:
    - push
    - pull_request
@@ -75,11 +75,11 @@ steps:
     status:
       - failure
     branch:
-      - master
+      - stable-12.2
 
 trigger:
   branch:
-    - master
+    - stable-12.2
   event:
     - push
     - pull_request
