--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
 
         // mayor.minor.hotfix.increment (for increment: 01-50=Alpha / 51-89=RC / 90-99=stable)
         // xx   .xxx  .xx    .xx
-        versionCode 120020007
-        versionName "12.2.0 Alpha 07"
+        versionCode 120020090
+        versionName "12.2.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
