--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,5 +12,5 @@ updates:
                 timezone: Europe/Paris
             open-pull-requests-limit: 10
             labels:
-                - 3. to review
-                - dependencies
+                - "3. to review"
+                - "dependencies"
