--- a/app/build.gradle
+++ b/app/build.gradle
@@ -187,6 +187,7 @@ dependencies {
     ktlint "com.pinterest:ktlint:0.43.0"
     implementation 'org.conscrypt:conscrypt-android:2.5.2'
 
+    implementation 'androidx.camera:camera-core:1.0.1'
     implementation 'androidx.camera:camera-camera2:1.0.1'
     implementation 'androidx.camera:camera-lifecycle:1.0.1'
     implementation 'androidx.camera:camera-view:1.0.0-alpha28'
