Add test for login flow
Signed-off-by: Tim Krüger <t@timkrueger.me>

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 # Nextcloud Talk application
 #
 # @author Mario Danic
+# @author Tim Krüger
+# Copyright (C) 2021 Tim Krüger <t@timkrueger.me>
 # Copyright (C) 2017-2019 Mario Danic <mario@lovelyhq.com>
 #
 # This program is free software: you can redistribute it and/or modify
@@ -39,3 +41,7 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
 org.gradle.parallel=true
+
+NC_TEST_SERVER_BASEURL=http://server
+NC_TEST_SERVER_USERNAME=user1
+NC_TEST_SERVER_PASSWORD=user1
