--- a/.drone.yml
+++ b/.drone.yml
@@ -47,28 +47,24 @@ steps:
       - scripts/wait_for_emulator.sh
       - ./gradlew --console=plain testGplayDebugUnitTest connectedGplayDebugAndroidTest
 
-#services:
-#  - name: server
-#    image: nextcloudci/server:server-17 # also change in updateScreenshots.sh
-#    environment:
-#      EVAL: true
-#    commands:
-#      - BRANCH='stable22' /usr/local/bin/initnc.sh
-#      - echo 127.0.0.1 server >> /etc/hosts
-#      - su www-data -c "OC_PASS=user1 php /var/www/html/occ user:add --password-from-env --display-name='User One' user1"
-#      - su www-data -c "OC_PASS=user2 php /var/www/html/occ user:add --password-from-env --display-name='User Two' user2"
-#      - su www-data -c "OC_PASS=user3 php /var/www/html/occ user:add --password-from-env --display-name='User Three' user3"
-#      - su www-data -c "php /var/www/html/occ user:setting user2 files quota 1G"
-#      - su www-data -c "php /var/www/html/occ group:add users"
-#      - su www-data -c "php /var/www/html/occ group:adduser users user1"
-#      - su www-data -c "php /var/www/html/occ group:adduser users user2"
-#      - su www-data -c "git clone -b stable22 https://github.com/nextcloud/activity.git /var/www/html/apps/activity/"
-#      - su www-data -c "php /var/www/html/occ app:enable activity"
-#      - su www-data -c "git clone -b stable22 https://github.com/nextcloud/text.git /var/www/html/apps/text/"
-#      - su www-data -c "php /var/www/html/occ app:enable text"
-#      - su www-data -c "git clone -b stable22 https://github.com/nextcloud/end_to_end_encryption.git /var/www/html/apps/end_to_end_encryption/"
-#      - su www-data -c "php /var/www/html/occ app:enable end_to_end_encryption"
-#      - /usr/local/bin/run.sh
+services:
+  - name: server
+    image: nextcloudci/server:server-17
+    environment:
+      EVAL: "true"
+    commands:
+      - BRANCH='stable23' /usr/local/bin/initnc.sh
+      - echo 127.0.0.1 server >> /etc/hosts
+      - su www-data -c "OC_PASS=user1 php /var/www/html/occ user:add --password-from-env --display-name='User One' user1"
+      - su www-data -c "OC_PASS=user2 php /var/www/html/occ user:add --password-from-env --display-name='User Two' user2"
+      - su www-data -c "OC_PASS=user3 php /var/www/html/occ user:add --password-from-env --display-name='User Three' user3"
+      - su www-data -c "php /var/www/html/occ user:setting user2 files quota 1G"
+      - su www-data -c "php /var/www/html/occ group:add users"
+      - su www-data -c "php /var/www/html/occ group:adduser users user1"
+      - su www-data -c "php /var/www/html/occ group:adduser users user2"
+      - su www-data -c "git clone -b stable23 https://github.com/nextcloud/spreed.git /var/www/html/apps/spreed/"
+      - su www-data -c "php /var/www/html/occ app:enable spreed"
+      - /usr/local/bin/run.sh
 
 trigger:
   branch:
